@@ -10,26 +10,19 @@ import org.mockito.Captor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.mockito.junit.jupiter.MockitoSettings;
-import org.mockito.quality.Strictness;
-import org.springframework.data.util.Streamable;
 import org.testcontainers.shaded.com.google.common.io.Resources;
 import uk.gov.hmcts.reform.idam.client.models.UserInfo;
-import uk.gov.hmcts.reform.jps.components.BaseEvaluateDuplicate;
 import uk.gov.hmcts.reform.jps.data.SecurityUtils;
 import uk.gov.hmcts.reform.jps.domain.Service;
-import uk.gov.hmcts.reform.jps.domain.SittingRecordDuplicateProjection;
-import uk.gov.hmcts.reform.jps.domain.SittingRecordDuplicateProjection.SittingRecordDuplicateCheckFields;
 import uk.gov.hmcts.reform.jps.domain.SittingRecord_;
 import uk.gov.hmcts.reform.jps.domain.StatusHistory;
 import uk.gov.hmcts.reform.jps.exceptions.ConflictException;
-import uk.gov.hmcts.reform.jps.exceptions.ResourceNotFoundException;
-import uk.gov.hmcts.reform.jps.model.SittingRecordWrapper;
+import uk.gov.hmcts.reform.jps.exceptions.ForbiddenException;
 import uk.gov.hmcts.reform.jps.model.StatusId;
 import uk.gov.hmcts.reform.jps.model.in.RecordSittingRecordRequest;
-import uk.gov.hmcts.reform.jps.model.in.SittingRecordRequest;
 import uk.gov.hmcts.reform.jps.model.in.SittingRecordSearchRequest;
 import uk.gov.hmcts.reform.jps.model.out.SittingRecord;
+import uk.gov.hmcts.reform.jps.refdata.location.model.CourtVenue;
 import uk.gov.hmcts.reform.jps.repository.SittingRecordRepository;
 import uk.gov.hmcts.reform.jps.services.refdata.LocationService;
 
@@ -37,11 +30,9 @@ import java.io.IOException;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.Month;
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
-import java.util.Random;
 import java.util.UUID;
 import java.util.stream.Collectors;
 import java.util.stream.LongStream;
@@ -51,49 +42,35 @@ import static java.time.LocalDateTime.now;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.tuple;
 import static org.junit.Assert.assertThrows;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyLong;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.ArgumentMatchers.isA;
 import static org.mockito.BDDMockito.given;
-import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 import static org.testcontainers.shaded.com.google.common.base.Charsets.UTF_8;
 import static org.testcontainers.shaded.com.google.common.io.Resources.getResource;
-import static uk.gov.hmcts.reform.jps.model.Duration.AM;
-import static uk.gov.hmcts.reform.jps.model.Duration.PM;
-import static uk.gov.hmcts.reform.jps.model.ErrorCode.INVALID_LOCATION;
-import static uk.gov.hmcts.reform.jps.model.ErrorCode.POTENTIAL_DUPLICATE_RECORD;
+import static uk.gov.hmcts.reform.jps.model.StatusId.DELETED;
 import static uk.gov.hmcts.reform.jps.model.StatusId.RECORDED;
 import static uk.gov.hmcts.reform.jps.model.StatusId.SUBMITTED;
 
 @ExtendWith(MockitoExtension.class)
-@MockitoSettings(strictness = Strictness.LENIENT)
-class SittingRecordServiceTest extends BaseEvaluateDuplicate {
+class SittingRecordServiceTest {
 
     private static final String USER_ID = UUID.randomUUID().toString();
     private static final String UPDATED_BY_USER_ID = UUID.randomUUID().toString();
-
-    private static final Long ID = new Random().nextLong();
-    public static final String HMCTS_SERVICE_CODE = "test";
-    public static final String EPIMMS_ID = "epimms001";
-    public static final String LOCATION = "Sutton Social Security";
+    private static final Long ID = 1L;
 
     @Mock
     private SittingRecordRepository sittingRecordRepository;
+    @Mock
+    private LocationService locationService;
+    @Mock
+    private ServiceService serviceService;
 
     @Mock
     private SecurityUtils securityUtils;
-
-    @Mock
-    private DuplicateCheckerService duplicateCheckerService;
-
-    @Mock
-    private LocationService locationService;
-
-    @Mock
-    private ServiceService serviceService;
 
     private final ObjectMapper objectMapper = new ObjectMapper();
 
@@ -106,25 +83,17 @@ class SittingRecordServiceTest extends BaseEvaluateDuplicate {
     @BeforeEach
     void setUp() {
         objectMapper.registerModule(new JavaTimeModule());
-        when(locationService.getVenueName(HMCTS_SERVICE_CODE, EPIMMS_ID))
-            .thenReturn(LOCATION);
-        when(serviceService.findService(HMCTS_SERVICE_CODE))
-            .thenReturn(Optional.of(Service.builder()
-                                        .accountCenterCode("123")
-                                        .build()));
     }
 
     @Test
     void shouldReturnTotalRecordCount() {
-        when(sittingRecordRepository.totalRecords(
-            isA(SittingRecordSearchRequest.class),
-            isA(String.class)
-        ))
-            .thenReturn(10);
+        when(sittingRecordRepository.totalRecords(isA(SittingRecordSearchRequest.class),
+                                                  isA(String.class)))
+            .thenReturn(10L);
 
-        int totalRecordCount = sittingRecordService.getTotalRecordCount(
+        long totalRecordCount = sittingRecordService.getTotalRecordCount(
             SittingRecordSearchRequest.builder().build(),
-            HMCTS_SERVICE_CODE
+            "test"
         );
 
         assertThat(totalRecordCount)
@@ -134,71 +103,36 @@ class SittingRecordServiceTest extends BaseEvaluateDuplicate {
 
     @Test
     void shouldReturnSittingRecordsWhenRecordPresentInDb() {
-        when(sittingRecordRepository.find(
-            isA(SittingRecordSearchRequest.class),
-            isA(String.class)
-        ))
-            .thenReturn(getDbSittingRecords(2));
+        when(sittingRecordRepository.find(isA(SittingRecordSearchRequest.class),
+                                                  isA(String.class)))
+            .thenReturn(getDbSittingRecords(2).stream());
+
+        when(locationService.getCourtVenues(anyString()))
+            .thenReturn(List.of(
+                CourtVenue.builder()
+                    .epimmsId("1")
+                    .regionId("1")
+                    .siteName("one")
+                    .build())
+            );
+        when(serviceService.findService(anyString()))
+            .thenReturn(Optional.of(Service.builder()
+                    .accountCenterCode("123")
+                        .build())
+            );
 
         List<SittingRecord> sittingRecords = sittingRecordService.getSittingRecords(
             SittingRecordSearchRequest.builder().build(),
-            HMCTS_SERVICE_CODE
+            "test"
         );
 
         assertThat(sittingRecords).hasSize(2);
 
-
-        assertThat(sittingRecords.get(0)).isEqualTo(getDomainSittingRecords(2).get(0));
-        assertThat(sittingRecords.get(1)).isEqualTo(getDomainSittingRecords(2).get(1));
+        assertEquals(sittingRecords.get(0), getDomainSittingRecords(2).get(0));
+        assertEquals(sittingRecords.get(1), getDomainSittingRecords(2).get(1));
+        verify(locationService).getCourtVenues(anyString());
+        verify(serviceService).findService(anyString());
     }
-
-
-    @Test
-    void shouldReturnSittingRecordsWhenRecordPresentInDbWithAmNull() {
-        List<uk.gov.hmcts.reform.jps.domain.SittingRecord> dbSittingRecords = getDbSittingRecords(1);
-        dbSittingRecords.get(0).setAm(false);
-
-        when(sittingRecordRepository.find(
-            isA(SittingRecordSearchRequest.class),
-            isA(String.class)
-        ))
-            .thenReturn(dbSittingRecords);
-
-        List<SittingRecord> sittingRecords = sittingRecordService.getSittingRecords(
-            SittingRecordSearchRequest.builder().build(),
-            HMCTS_SERVICE_CODE
-        );
-
-        List<SittingRecord> domainSittingRecords = getDomainSittingRecords(1);
-        domainSittingRecords.get(0).setAm(null);
-
-        assertThat(sittingRecords).hasSize(1);
-        assertThat(sittingRecords.get(0)).isEqualTo(domainSittingRecords.get(0));
-    }
-
-    @Test
-    void shouldReturnSittingRecordsWhenRecordPresentInDbWithPmNull() {
-        List<uk.gov.hmcts.reform.jps.domain.SittingRecord> dbSittingRecords = getDbSittingRecords(1);
-        dbSittingRecords.get(0).setPm(false);
-
-        when(sittingRecordRepository.find(
-            isA(SittingRecordSearchRequest.class),
-            isA(String.class)
-        ))
-            .thenReturn(dbSittingRecords);
-
-        List<SittingRecord> sittingRecords = sittingRecordService.getSittingRecords(
-            SittingRecordSearchRequest.builder().build(),
-            HMCTS_SERVICE_CODE
-        );
-
-        List<SittingRecord> domainSittingRecords = getDomainSittingRecords(1);
-        domainSittingRecords.get(0).setPm(null);
-
-        assertThat(sittingRecords).hasSize(1);
-        assertThat(sittingRecords.get(0)).isEqualTo(domainSittingRecords.get(0));
-    }
-
 
     @Test
     void shouldSaveSittingRecordsWhenRequestIsValid() throws IOException {
@@ -207,20 +141,8 @@ class SittingRecordServiceTest extends BaseEvaluateDuplicate {
             requestJson,
             RecordSittingRecordRequest.class
         );
-        List<SittingRecordWrapper> sittingRecordWrappers =
-            recordSittingRecordRequest.getRecordedSittingRecords().stream()
-                .map(SittingRecordWrapper::new)
-                .toList();
-
-        sittingRecordWrappers
-            .forEach(sittingRecordWrapper -> sittingRecordWrapper.setRegionId("1"));
-
-        sittingRecordService.saveSittingRecords(
-            HMCTS_SERVICE_CODE,
-            sittingRecordWrappers,
-            recordSittingRecordRequest.getRecordedByName(),
-            recordSittingRecordRequest.getRecordedByIdamId());
-
+        sittingRecordService.saveSittingRecords("test",
+                                                recordSittingRecordRequest);
         verify(sittingRecordRepository, times(3))
             .save(sittingRecordArgumentCaptor.capture());
 
@@ -230,20 +152,20 @@ class SittingRecordServiceTest extends BaseEvaluateDuplicate {
                                               SittingRecord_.PERSONAL_CODE, SittingRecord_.CONTRACT_TYPE_ID,
                                               SittingRecord_.JUDGE_ROLE_TYPE_ID, SittingRecord_.AM, SittingRecord_.PM)
                 .contains(
-                    tuple(of(2022, Month.MAY, 11), RECORDED, "852649",
-                          HMCTS_SERVICE_CODE, "4918500", 1L, "Tester", false, true),
-                    tuple(of(2023, Month.APRIL, 10), RECORDED, "852649",
-                          HMCTS_SERVICE_CODE, "4918179", 1L, "Judge", true, false),
-                    tuple(of(2023, Month.MARCH, 9), RECORDED, "852649",
-                          HMCTS_SERVICE_CODE, "4918180", 1L, "Judge", true, true)
+                    tuple(of(2023, Month.MAY, 11), StatusId.RECORDED.name(), "852649",
+                          "test", "4918178", 1L, "Judge", false, true),
+                    tuple(of(2023, Month.APRIL, 10), StatusId.RECORDED.name(), "852649",
+                          "test", "4918179", 1L, "Judge", true, false),
+                    tuple(of(2023, Month.MARCH, 9), StatusId.RECORDED.name(), "852649",
+                          "test", "4918180", 1L, "Judge", true, true)
         );
 
         assertThat(sittingRecords).flatExtracting(uk.gov.hmcts.reform.jps.domain.SittingRecord::getStatusHistories)
             .extracting("statusId", "changedByUserId", "changedByName")
             .contains(
-                tuple(RECORDED, "d139a314-eb40-45f4-9e7a-9e13f143cc3a", "Recorder"),
-                tuple(RECORDED, "d139a314-eb40-45f4-9e7a-9e13f143cc3a", "Recorder"),
-                tuple(RECORDED, "d139a314-eb40-45f4-9e7a-9e13f143cc3a", "Recorder")
+                tuple("RECORDED", "d139a314-eb40-45f4-9e7a-9e13f143cc3a", "Recorder"),
+                tuple("RECORDED", "d139a314-eb40-45f4-9e7a-9e13f143cc3a", "Recorder"),
+                tuple("RECORDED", "d139a314-eb40-45f4-9e7a-9e13f143cc3a", "Recorder")
         );
 
         assertThat(sittingRecords).describedAs("Created date assertion")
@@ -256,9 +178,9 @@ class SittingRecordServiceTest extends BaseEvaluateDuplicate {
             .mapToObj(count -> uk.gov.hmcts.reform.jps.domain.SittingRecord.builder()
                 .id(count)
                 .sittingDate(LocalDate.now().minusDays(2))
-                .statusId(RECORDED)
+                .statusId(StatusId.RECORDED.name())
                 .regionId("1")
-                .epimmsId(EPIMMS_ID)
+                .epimmsId("epims001")
                 .hmctsServiceId("sscs")
                 .personalCode("001")
                 .contractTypeId(count)
@@ -266,7 +188,7 @@ class SittingRecordServiceTest extends BaseEvaluateDuplicate {
                 .am(true)
                 .pm(true)
                 .build())
-            .collect(Collectors.toList());
+            .toList();
     }
 
     private List<SittingRecord> getDomainSittingRecords(int limit) {
@@ -274,21 +196,21 @@ class SittingRecordServiceTest extends BaseEvaluateDuplicate {
             .mapToObj(count -> SittingRecord.builder()
                     .sittingRecordId(count)
                     .sittingDate(LocalDate.now().minusDays(2))
-                    .statusId(StatusId.RECORDED)
+                    .statusId(StatusId.RECORDED.name())
                     .regionId("1")
-                    .epimmsId(EPIMMS_ID)
+                    .epimmsId("epims001")
                     .hmctsServiceId("sscs")
                     .personalCode("001")
                     .contractTypeId(count)
                     .judgeRoleTypeId("HighCourt")
-                    .am(AM.name())
-                    .pm(PM.name())
+                    .am(true)
+                    .pm(true)
                     .build())
             .collect(Collectors.toList());
     }
 
 
-    private uk.gov.hmcts.reform.jps.domain.SittingRecord deleteTestSetUp(String changeById, StatusId state) {
+    private uk.gov.hmcts.reform.jps.domain.SittingRecord deleteTestSetUp(String changeById, String state) {
         StatusHistory statusHistory = StatusHistory.builder()
             .statusId(state)
             .changedDateTime(now())
@@ -302,7 +224,7 @@ class SittingRecordServiceTest extends BaseEvaluateDuplicate {
             .sittingDate(LocalDate.now().minusDays(2))
             .statusId(state)
             .regionId("1")
-            .epimmsId(EPIMMS_ID)
+            .epimmsId("epims001")
             .hmctsServiceId("sscs")
             .personalCode("001")
             .contractTypeId(1L)
@@ -321,54 +243,68 @@ class SittingRecordServiceTest extends BaseEvaluateDuplicate {
         UserInfo userInfo =  UserInfo.builder().roles(List.of("jps-recorder")).uid(USER_ID).build();
         given(securityUtils.getUserInfo()).willReturn(userInfo);
 
-        uk.gov.hmcts.reform.jps.domain.SittingRecord sittingRecord = deleteTestSetUp(USER_ID, RECORDED);
+        uk.gov.hmcts.reform.jps.domain.SittingRecord sittingRecord = deleteTestSetUp(USER_ID, RECORDED.name());
 
-        when(sittingRecordRepository.findById(sittingRecord.getId())).thenReturn(Optional.of(sittingRecord));
-
-        System.out.print("post set up");
-        System.out.print(sittingRecord.getStatusId());
-        System.out.print(sittingRecord.getId().toString());
+        when(sittingRecordRepository.findRecorderSittingRecord(sittingRecord.getId(), DELETED.name()))
+                .thenReturn(Optional.of(sittingRecord));
+        when(sittingRecordRepository.findRecorderSittingRecord(ID, DELETED.name()))
+                .thenReturn(Optional.of(sittingRecord));
 
         sittingRecordService.deleteSittingRecord(sittingRecord.getId());
 
         Optional<StatusHistory> optionalStatusHistory
             = sittingRecord.getStatusHistories().stream().max(Comparator.comparing(
             StatusHistory::getChangedDateTime));
-        StatusHistory statusHistory = null;
-        if (optionalStatusHistory != null && !optionalStatusHistory.isEmpty()) {
-            statusHistory = optionalStatusHistory.get();
-        }
 
-        assertThat(statusHistory.getStatusId().equals("DELETED"));
+        assertThat(optionalStatusHistory)
+            .map(StatusHistory::getStatusId)
+            .hasValue("DELETED");
 
     }
 
     @Test
     void shouldDeleteRecordSubmitter() {
         UserInfo userInfo = UserInfo.builder().roles(List.of("jps-submitter")).uid(USER_ID).build();
+        given(securityUtils.getUserInfo()).willReturn(userInfo);
 
         uk.gov.hmcts.reform.jps.domain.SittingRecord sittingRecord = deleteTestSetUp(
-            UPDATED_BY_USER_ID,
-            RECORDED
+            UPDATED_BY_USER_ID, RECORDED.name()
         );
 
-        StatusHistory statusHistory = sittingRecord.getLatestStatusHistory();
-        assertThat(statusHistory).isNotNull();
-        assertThat(statusHistory.getStatusId().equals("DELETED"));
+        when(sittingRecordRepository.findRecorderSittingRecord(sittingRecord.getId(), DELETED.name()))
+                .thenReturn(Optional.of(sittingRecord));
+
+        sittingRecordService.deleteSittingRecord(sittingRecord.getId());
+
+        Optional<StatusHistory> optionalStatusHistory
+            = sittingRecord.getStatusHistories().stream().max(Comparator.comparing(
+            StatusHistory::getChangedDateTime));
+
+        assertThat(optionalStatusHistory)
+            .map(StatusHistory::getStatusId)
+            .hasValue("DELETED");
     }
 
     @Test
     void shouldDeleteRecordAdmin() {
         UserInfo userInfo = UserInfo.builder().roles(List.of("jps-admin")).uid(USER_ID).build();
+        given(securityUtils.getUserInfo()).willReturn(userInfo);
 
         uk.gov.hmcts.reform.jps.domain.SittingRecord sittingRecord = deleteTestSetUp(
-            UPDATED_BY_USER_ID,
-            SUBMITTED
+            UPDATED_BY_USER_ID, SUBMITTED.name()
         );
 
-        StatusHistory statusHistory = sittingRecord.getLatestStatusHistory();
-        assertThat(statusHistory).isNotNull();
-        assertThat(statusHistory.getStatusId().equals("DELETED"));
+        when(sittingRecordRepository.findRecorderSittingRecord(sittingRecord.getId(), DELETED.name()))
+                .thenReturn(Optional.of(sittingRecord));
+
+        sittingRecordService.deleteSittingRecord(sittingRecord.getId());
+
+        Optional<StatusHistory> optionalStatusHistory
+            = sittingRecord.getStatusHistories().stream().max(Comparator.comparing(
+            StatusHistory::getChangedDateTime));
+        assertThat(optionalStatusHistory)
+            .map(StatusHistory::getStatusId)
+            .hasValue("DELETED");
     }
 
     @Test
@@ -377,20 +313,20 @@ class SittingRecordServiceTest extends BaseEvaluateDuplicate {
         given(securityUtils.getUserInfo()).willReturn(userInfo);
 
         uk.gov.hmcts.reform.jps.domain.SittingRecord sittingRecord =
-            deleteTestSetUp(UPDATED_BY_USER_ID, RECORDED);
+            deleteTestSetUp(UPDATED_BY_USER_ID, RECORDED.name());
 
-        when(sittingRecordRepository.findById(sittingRecord.getId())).thenReturn(Optional.of(sittingRecord));
+        when(sittingRecordRepository.findRecorderSittingRecord(sittingRecord.getId(), DELETED.name()))
+                .thenReturn(Optional.of(sittingRecord));
 
-        Exception exception = assertThrows(ResourceNotFoundException.class, () ->
-            sittingRecordService.deleteSittingRecord(sittingRecord.getId())
+        Exception exception = assertThrows(ForbiddenException.class, () ->
+            sittingRecordService.deleteSittingRecord(ID)
         );
 
-        StatusHistory statusHistory = sittingRecord.getLatestStatusHistory();
-        assertThat(statusHistory).isNotNull();
-
-        assertThat(statusHistory.getStatusId()).isEqualTo(RECORDED);
-        assertThat(exception.getMessage())
-            .isEqualTo("User IDAM ID does not match the oldest Changed by IDAM ID ");
+        Optional<StatusHistory> statusHistory = sittingRecord.getLatestStatusHistory();
+        assertThat(statusHistory)
+            .map(StatusHistory::getStatusId)
+            .hasValue("RECORDED");
+        assertEquals("User IDAM ID does not match the oldest Changed by IDAM ID ", exception.getMessage());
     }
 
     @Test
@@ -398,15 +334,16 @@ class SittingRecordServiceTest extends BaseEvaluateDuplicate {
         UserInfo userInfo = UserInfo.builder().roles(List.of("jps-recorder")).uid(USER_ID).build();
         given(securityUtils.getUserInfo()).willReturn(userInfo);
 
-        uk.gov.hmcts.reform.jps.domain.SittingRecord sittingRecord = deleteTestSetUp(USER_ID, SUBMITTED);
+        uk.gov.hmcts.reform.jps.domain.SittingRecord sittingRecord = deleteTestSetUp(USER_ID, SUBMITTED.name());
 
-        when(sittingRecordRepository.findById(sittingRecord.getId())).thenReturn(Optional.of(sittingRecord));
+        when(sittingRecordRepository.findRecorderSittingRecord(sittingRecord.getId(), DELETED.name()))
+                .thenReturn(Optional.of(sittingRecord));
 
+        Long id = sittingRecord.getId();
         Exception exception = assertThrows(ConflictException.class, () ->
-            sittingRecordService.deleteSittingRecord(sittingRecord.getId())
+            sittingRecordService.deleteSittingRecord(id)
         );
-        assertThat(exception.getMessage())
-            .isEqualTo("Sitting Record Status ID is in wrong state");
+        assertEquals("Sitting Record Status ID is in wrong state", exception.getMessage());
     }
 
     @Test
@@ -414,15 +351,16 @@ class SittingRecordServiceTest extends BaseEvaluateDuplicate {
         UserInfo userInfo = UserInfo.builder().roles(List.of("jps-submitter")).uid(USER_ID).build();
         given(securityUtils.getUserInfo()).willReturn(userInfo);
 
-        uk.gov.hmcts.reform.jps.domain.SittingRecord sittingRecord = deleteTestSetUp(USER_ID, SUBMITTED);
+        uk.gov.hmcts.reform.jps.domain.SittingRecord sittingRecord = deleteTestSetUp(USER_ID, SUBMITTED.name());
 
-        when(sittingRecordRepository.findById(sittingRecord.getId())).thenReturn(Optional.of(sittingRecord));
+        when(sittingRecordRepository.findRecorderSittingRecord(sittingRecord.getId(), DELETED.name()))
+                .thenReturn(Optional.of(sittingRecord));
 
-        Exception exception = assertThrows(ConflictException.class, () -> {
-            sittingRecordService.deleteSittingRecord(sittingRecord.getId());
-        });
-        assertThat(exception.getMessage())
-            .isEqualTo("Sitting Record Status ID is in wrong state");
+        Long id = sittingRecord.getId();
+        Exception exception = assertThrows(ConflictException.class, () ->
+            sittingRecordService.deleteSittingRecord(id)
+        );
+        assertEquals("Sitting Record Status ID is in wrong state", exception.getMessage());
     }
 
     @Test
@@ -430,182 +368,16 @@ class SittingRecordServiceTest extends BaseEvaluateDuplicate {
         UserInfo userInfo = UserInfo.builder().roles(List.of("jps-admin")).uid(USER_ID).build();
         given(securityUtils.getUserInfo()).willReturn(userInfo);
 
-        uk.gov.hmcts.reform.jps.domain.SittingRecord sittingRecord = deleteTestSetUp(USER_ID, RECORDED);
+        uk.gov.hmcts.reform.jps.domain.SittingRecord sittingRecord = deleteTestSetUp(USER_ID, RECORDED.name());
 
-        when(sittingRecordRepository.findById(sittingRecord.getId())).thenReturn(Optional.of(sittingRecord));
+        when(sittingRecordRepository.findRecorderSittingRecord(sittingRecord.getId(), DELETED.name()))
+                .thenReturn(Optional.of(sittingRecord));
 
-        Exception exception = assertThrows(ConflictException.class, () -> {
-            sittingRecordService.deleteSittingRecord(sittingRecord.getId());
-        });
-        assertThat(exception.getMessage())
-            .isEqualTo("Sitting Record Status ID is in wrong state");
+        Long id = sittingRecord.getId();
+        Exception exception = assertThrows(ConflictException.class, () ->
+            sittingRecordService.deleteSittingRecord(id)
+        );
+        assertEquals("Sitting Record Status ID is in wrong state", exception.getMessage());
     }
 
-
-    @Test
-    void shouldInvokeDuplicateCheckerWhenMatchingRecordsFoundInDb() throws IOException {
-        String requestJson = Resources.toString(getResource("recordSittingRecordsPotentialDuplicate.json"), UTF_8);
-        RecordSittingRecordRequest recordSittingRecordRequest = objectMapper.readValue(
-            requestJson,
-            RecordSittingRecordRequest.class
-        );
-
-        SittingRecordRequest sittingRecordRequest = recordSittingRecordRequest.getRecordedSittingRecords().get(0);
-        SittingRecordDuplicateProjection.SittingRecordDuplicateCheckFields sittingRecordDuplicateCheckFields
-            = getDbRecord(
-            sittingRecordRequest.getSittingDate(),
-            sittingRecordRequest.getEpimmsId(),
-            sittingRecordRequest.getPersonalCode(),
-            sittingRecordRequest.getDurationBoolean().getAm(),
-            sittingRecordRequest.getDurationBoolean().getPm(),
-            "Tester",
-            RECORDED
-        );
-
-        when(sittingRecordRepository.findBySittingDateAndEpimmsIdAndPersonalCodeAndStatusIdNot(
-            any(), any(), any(), any())
-        ).thenReturn(Streamable.of(List.of(sittingRecordDuplicateCheckFields)));
-
-
-        List<SittingRecordWrapper> sittingRecordWrappers =
-            recordSittingRecordRequest.getRecordedSittingRecords().stream()
-                .map(SittingRecordWrapper::new)
-                .toList();
-
-        sittingRecordService.checkDuplicateRecords(sittingRecordWrappers);
-
-        verify(duplicateCheckerService, times(3)).evaluate(any(), any());
-    }
-
-    @Test
-    void shouldNotInvokeDuplicateCheckerWhenSittingRecordWrapperIsInValid() throws IOException {
-        String requestJson = Resources.toString(getResource("recordSittingRecords.json"), UTF_8);
-        RecordSittingRecordRequest recordSittingRecordRequest = objectMapper.readValue(
-            requestJson,
-            RecordSittingRecordRequest.class
-        );
-
-        List<SittingRecordWrapper> sittingRecordWrappers =
-            recordSittingRecordRequest.getRecordedSittingRecords().stream()
-                .map(sittingRecordRequest -> SittingRecordWrapper.builder()
-                    .sittingRecordRequest(sittingRecordRequest)
-                    .errorCode(INVALID_LOCATION)
-                    .build())
-                .toList();
-
-        sittingRecordService.checkDuplicateRecords(sittingRecordWrappers);
-
-        verify(duplicateCheckerService, never()).evaluate(any(), any());
-    }
-
-    @Test
-    void shouldNotInvokeDuplicateCheckerWhenNoMatchingRecordsFoundInDb() throws IOException {
-        String requestJson = Resources.toString(getResource("recordSittingRecordsPotentialDuplicate.json"), UTF_8);
-        RecordSittingRecordRequest recordSittingRecordRequest = objectMapper.readValue(
-            requestJson,
-            RecordSittingRecordRequest.class
-        );
-
-        List<SittingRecordDuplicateCheckFields> dbSittingRecordDuplicateCheckFields = Collections.emptyList();
-
-        when(sittingRecordRepository.findBySittingDateAndEpimmsIdAndPersonalCodeAndStatusIdNot(
-            any(), any(), any(), any())
-        ).thenReturn(Streamable.of(dbSittingRecordDuplicateCheckFields));
-
-        List<SittingRecordWrapper> sittingRecordWrappers =
-            recordSittingRecordRequest.getRecordedSittingRecords().stream()
-                .map(SittingRecordWrapper::new)
-                .toList();
-
-        sittingRecordService.checkDuplicateRecords(sittingRecordWrappers);
-
-        verify(duplicateCheckerService, never()).evaluate(any(), any());
-    }
-
-    @Test
-    void shouldRecordSittingRecordsWhenPotentialDuplicateRecord() throws IOException {
-        long sittingRecordId = 9L;
-        String requestJson = Resources.toString(getResource("singleSittingRecordWithPotentialDuplicate.json"), UTF_8);
-        requestJson = requestJson.replace("<flag>", "true");
-        RecordSittingRecordRequest recordSittingRecordRequest = objectMapper.readValue(
-                requestJson,
-                RecordSittingRecordRequest.class
-        );
-
-        List<SittingRecordWrapper> sittingRecordWrappers =
-                recordSittingRecordRequest.getRecordedSittingRecords().stream()
-                        .map(SittingRecordWrapper::new)
-                        .peek(sittingRecordWrapper -> {
-                            sittingRecordWrapper.setSittingRecordId(sittingRecordId);
-                            sittingRecordWrapper.setErrorCode(POTENTIAL_DUPLICATE_RECORD);
-                        })
-                        .toList();
-        when(sittingRecordRepository.findById(anyLong()))
-            .thenReturn(Optional.of(uk.gov.hmcts.reform.jps.domain.SittingRecord.builder().build()));
-        UserInfo userInfo = UserInfo.builder()
-            .uid(USER_ID)
-            .givenName("Judge")
-            .build();
-        when(securityUtils.getUserInfo()).thenReturn(userInfo);
-
-        sittingRecordService.saveSittingRecords("SSC_ID",
-                sittingRecordWrappers,
-                recordSittingRecordRequest.getRecordedByName(),
-                recordSittingRecordRequest.getRecordedByIdamId());
-
-        verify(sittingRecordRepository, times(2)).save(isA(uk.gov.hmcts.reform.jps.domain.SittingRecord.class));
-    }
-
-    @Test
-    void shouldNotDeleteRecordSittingRecordsWhenPotentialDuplicateRecordIsNotSet() throws IOException {
-        long sittingRecordId = 9L;
-        String requestJson = Resources.toString(getResource("singleSittingRecordWithPotentialDuplicate.json"), UTF_8);
-        requestJson = requestJson.replace("<flag>", "true");
-        RecordSittingRecordRequest recordSittingRecordRequest = objectMapper.readValue(
-                requestJson,
-                RecordSittingRecordRequest.class
-        );
-
-        List<SittingRecordWrapper> sittingRecordWrappers =
-                recordSittingRecordRequest.getRecordedSittingRecords().stream()
-                        .map(SittingRecordWrapper::new)
-                        .peek(sittingRecordWrapper -> {
-                            sittingRecordWrapper.setSittingRecordId(sittingRecordId);
-                        })
-                        .toList();
-
-        sittingRecordService.saveSittingRecords("SSC_ID",
-                sittingRecordWrappers,
-                recordSittingRecordRequest.getRecordedByName(),
-                recordSittingRecordRequest.getRecordedByIdamId());
-
-        verify(sittingRecordRepository).save(isA(uk.gov.hmcts.reform.jps.domain.SittingRecord.class));
-    }
-
-    @Test
-    void shouldNotDeleteRecordSittingRecordsWhenPotentialDuplicateRecordButNoReplaceDuplicate() throws IOException {
-        long sittingRecordId = 9L;
-        String requestJson = Resources.toString(getResource("singleSittingRecordWithPotentialDuplicate.json"), UTF_8);
-        requestJson = requestJson.replace("<flag>", "false");
-        RecordSittingRecordRequest recordSittingRecordRequest = objectMapper.readValue(
-                requestJson,
-                RecordSittingRecordRequest.class
-        );
-
-        List<SittingRecordWrapper> sittingRecordWrappers =
-                recordSittingRecordRequest.getRecordedSittingRecords().stream()
-                        .map(SittingRecordWrapper::new)
-                        .peek(sittingRecordWrapper -> {
-                            sittingRecordWrapper.setSittingRecordId(sittingRecordId);
-                            sittingRecordWrapper.setErrorCode(POTENTIAL_DUPLICATE_RECORD);
-                        })
-                        .toList();
-
-        sittingRecordService.saveSittingRecords("SSC_ID",
-                sittingRecordWrappers,
-                recordSittingRecordRequest.getRecordedByName(),
-                recordSittingRecordRequest.getRecordedByIdamId());
-
-        verify(sittingRecordRepository).save(isA(uk.gov.hmcts.reform.jps.domain.SittingRecord.class));
-    }
 }
